--- a/SIIM_project/configs/path.yml
+++ b/SIIM_project/configs/path.yml
@@ -5,9 +5,9 @@ dumps:
   name_save: tt                     # name to save models
 
 data:
-  path: /Users/nikita/Programming/SIIM/SIIM/train_samples # path to data directory
+  path: ../../../../raid/data/ibespalov/SIIM_ACR/train_samples # path to data directory
   train_images: ./   # dir to train images
   train_masks: ./    # dir to labels
   test_images: images_test/  # dir to test
   folds: ../train.csv    # validation folds
-  predictions_path: preds.csv       # predictions name
+  predictions_path: preds.csv # predictions name
