--- a/SIIM_project/configs/path.yml
+++ b/SIIM_project/configs/path.yml
@@ -8,7 +8,8 @@ data:
   path: /home/nkotelevskii/PyCharm/SIIM/train_samples  # path to data directory
   train_images: ./   # dir to train images
   train_masks: ./    # dir to labels
-  test_images: ../test.csv  # dir to test
-  folds: ../train.csv    # validation folds
+  test_csv: ../submition.csv  # dir to test
+  test_images: ../test_samples
+  folds: ../train-rle.csv    # validation folds
 
   predictions_path: preds.csv       # predictions name
