--- a/SIIM_project/configs/config.yml
+++ b/SIIM_project/configs/config.yml
@@ -1,41 +1,42 @@
 data_params:
-  batch_size: 32
-  num_workers: 16
+  batch_size: 4
+  num_workers: 64
   augmentation_params:
-    resize: 256
+    resize: 1024
 
 train_params:
-  name: print_shapes #resnet.MultiResnet50_L_LBD_M_Dice
+  name: EfficientNet_classification_ok #resnet.MultiResnet50_L_LBD_M_Dice
 # 3d_unet_ChannelAttention_flip_plus_shift_raq_FPN
 #  model: models_zoo.segmentation.pspnet.PSPNet
 #  model: models_zoo.classification.resnet.resnet34
-  model: models_zoo.segmentation.resnet.MultiResnet50
+#  model: models_zoo.segmentation.resnet.MultiResnet50
+  model: models_zoo.classification.resnet.EfficientNet_1class #.se_resnet.se_resnext50
   model_params: {
-    num_filters: 16,
-    pretrained: True,
-    num_classes: 1}
+  }
+    #num_classes: 1 } #,
+   # pretrained: True
 
 #    num_filters: 16
 #    n_classes: 1}
 # loss: losses.BCE
 
-  loss: losses.LossBinaryDice
+  loss: losses.BCE
   loss_params: {}
-  metrics: [metrics.Dice]
+  metrics: [metrics.Binary_Accuracy]
   steps_per_epoch: 2500
   new_save: True
 #  weights: ../weights/Unet3d_organ_23_06/0/tt_2_0.09316.pt
 stages:
 -
   load_best: False
-  optimizer: SGD
+  optimizer: Adam
   optimizer_params:
-    lr: 0.01
+    lr: 0.0003
   scheduler: ReduceLROnPlateau
   scheduler_params:
-    patience: 15
+    patience: 7
     factor: 0.5
     min_lr: 0.000001
     verbose: True
-  epochs: 500
+  epochs: 750
   augmentation: mix_transform
