--- a/SIIM_project/configs/config.yml
+++ b/SIIM_project/configs/config.yml
@@ -1,37 +1,34 @@
 data_params:
-  batch_size: 10
+  batch_size: 6
   num_workers: 64
   augmentation_params:
-    resize: 512
+    resize: 1024
 
 train_params:
-  name: MultiResnet34_LBD_10_08 #densenet121_LBD #resnet.MultiResnet50_L_LBD_M_Dice
-# 3d_unet_ChannelAttention_flip_plus_shift_raq_FPN
-#  model: models_zoo.segmentation.pspnet.PSPNet
-#  model: models_zoo.classification.resnet.resnet34
-#  model: models_zoo.segmentation.resnet.MultiResnet50
-  model: models_zoo.segmentation.resnet.MultiResnet34 #models_zoo.segmentation.densenet.MultiSEDensenet121
-  model_params:
-    num_classes: 1
+  name: Efficicientnet_20_1024 #densenet121_LBD #resnet.MultiResnet50_L_LBD_M_Dice
+  model: models_zoo.classification.resnet.EfficientNet_1class #models_zoo.segmentation.densenet.MultiSEDensenet121 #models_zoo.segmentation.resnet.MultiResnet34
+  model_params: {
+  }
+#    num_classes: 1
 #    num_filters: 16
 #    pretrained: True
-  loss: losses.LossBinaryDice  #losses.MixedLoss
+  loss: losses.BCEWithLogitsLoss #losses.LossBinaryDice  #losses.MixedLoss
   loss_params: {}
-  metrics: [metrics.Dice, metrics.DiceMean]
+  metrics: [metrics.Binary_Accuracy, metrics.Binary_Accuracy09, metrics.Binary_Accuracy07 ] #[metrics.Dice, metrics.DiceMean]
   steps_per_epoch: 4000
   accumulation: 5
   new_save: True
-#  weights: ../weights/densenet121/0/tt_9_0.54119.pt
+  weights: ../weights/Efficicientnet_20_512/1/tt_1_0.88856.pt
 stages:
 -
   load_best: False
   optimizer: Adam
   optimizer_params:
-    lr: 0.0003    # 0.0003
+    lr: 0.0001    # 0.0003
   scheduler: ReduceLROnPlateau
   scheduler_params:
     mode: max
-    patience: 20
+    patience: 6
     factor: 0.5
     min_lr: 0.00001
     verbose: True
